tests/ui/de-double-from-attribute-one-line.stderr
error: The `from` field attribute is defined twice.
 --> tests/ui/de-double-from-attribute-one-line.rs:5:53
  |
5 |     #[deserr(from(String) = String::parse -> usize, from(String) = usize::FromStr -> usize)]
  |                                                     ^^^^
